--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>I just started a course on html</h1>
     <h2>And am happy about it you can also be part of it</h2>
     <p><b>lorem</b>do lor sit amet consectetur adipisicing elit.</p><p> Quo nihil deleniti facilis ex eveniet. Enim.</p>
-    <a href="www.vacademy.com.ng"> You can join us now</a>
+    <a href="www.vacademy.com.ng" target="_blank"> You can join us now</a>
     <p><audio src="Greatman_Takit_Korale_-_Commando_CeeNaija.com_.mp3" controls type="audio/mp3">
     <p><video src="56b45d4cf0934ea2803444436f91df6b.mp4" controls type="audio/mp4" width="400"></video></p>
 <p>
